Added links to footer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   </head>
   <body>
     <h1>Hello World</h1>
-    <footer>Coded By Vera Harris</footer>
+    <footer>
+      Built By
+      <a href="https://github.com/veetac21"> Vera Harris </a>
+      Hosted on <a href="https://github.com/veetac21/magic-8-portfolio">Github</a> and
+      website hosted on <a href="https://magic8ballportfolio.netlify.app">Netlify</a>. 
+    </footer>
   </body>
 </html>
