--- a/index.html
+++ b/index.html
@@ -6,12 +6,25 @@
     <title>Magic 8 Ball</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <header>
+      <h1>Magic 8 Ball</h1>
+    </header>
+    <div class="ball">
+
+    <p id="answer"
+    class="answer"
+    align="center" >
+    THIS IS WHERE THE ANSWER GOES
+    </p>
+
+       </div>
     <footer>
       Built By
       <a href="https://github.com/veetac21"> Vera Harris </a>
-      Hosted on <a href="https://github.com/veetac21/magic-8-portfolio">Github</a> and
-      website hosted on <a href="https://magic8ballportfolio.netlify.app">Netlify</a>. 
+      Hosted on
+      <a href="https://github.com/veetac21/magic-8-portfolio">Github</a> and
+      website hosted on
+      <a href="https://magic8ballportfolio.netlify.app">Netlify</a>.
     </footer>
   </body>
 </html>
